move model_selection

--- a/scripts/model_selection.ipynb
+++ b/scripts/model_selection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,12 +10,12 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
-    "fig_dir = \"manuscript/0.15/figs/\""
+    "fig_dir = \"../manuscript/figs/\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -30,8 +30,7 @@
     }
    ],
    "source": [
-    "score = pd.read_csv(\"results-230126.csv\")\n",
-    "#score = score.loc[score['first_year_train']<1930]\n",
+    "score = pd.read_csv(\"../trainedModels/results/results-230126.csv\")\n",
     "score = score.loc[score['latent_dim']<8]\n",
     "score = score.loc[score['latent_dim']>2]\n",
     "score['latent_dim'] = score['latent_dim'].astype('str')\n",
@@ -50,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
