--- a/manuscript/biblio.bib
+++ b/manuscript/biblio.bib
@@ -399,3 +399,14 @@ howpublished= {Available at \url{http://www.mortality.org} (downloaded on Januar
   pages={7785--7794},
   year={2018}
 }
+
+@article{plat2009stochastic,
+  title={On stochastic mortality modeling},
+  author={Plat, Richard},
+  journal={Insurance: Mathematics and Economics},
+  volume={45},
+  number={3},
+  pages={393--404},
+  year={2009},
+  publisher={Elsevier}
+}
