--- a/manuscript/VImortality.tex
+++ b/manuscript/VImortality.tex
@@ -112,7 +112,7 @@ This template helps you to create a properly formatte
 \end{abstract}
 
 \begin{keyword}
-Non-linear state-space-models \sep Mortality forecasting \sep Hidden Markov model \sep variational inference
+Non-linear state-space-models \sep Mortality forecasting \sep Hidden Markov model \sep Variational inference
 \end{keyword}
 
 \end{frontmatter}
